<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">resqapp</string>
    <string name="id1">ID</string>
    <string name="id">id</string>
    <string name="first_name1">First Name</string>
    <string name="firstname">first name</string>
    <string name="last_name1">Last Name</string>
    <string name="lastname">last name</string>
    <string name="password1">Password</string>
    <string name="password">password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="confirmpassword">confirm password</string>
    <string name="email1">Email</string>
    <string name="email2">email</string>
    <string name="contact1">Contact Number</string>
    <string name="contact2">contact number</string>
    <string name="register">REGISTER</string>
    <string name="location_tracking">LOCATION TRACKING</string>
    <string name="fire_department">FIRE DEPARTMENT</string>
    <string name="police_department">POLICE DEPARTMENT</string>
    <string name="ambulance_department">AMBULANCE DEPARTMENT</string>
    <string name="coast_guard_department">COAST GUARD DEPARTMENT</string>
    <string name="don_t_have_an_account">Dont have an account?</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="login">LOGIN</string>
    <string name="loading">Loading...</string>
    <string name="version">version 1.0</string>
    <string name="juan_dela_cruz1">Juan Dela Cruz</string>
    <string name="_09123456789">09123456789</string>
    <string name="id_number_123123">ID Number: </string>
    <string name="id_presented_philhealth">ID Presented: </string>
    <string name="user_number">User Number: </string>
    <string name="birthday">Birthday: </string>
    <string name="birthday1">Birthday </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">SAVE</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About us</string>
    <string name="offline_mode">OFFLINE MODE</string>
    <string name="emergency_hotlines">EMERGENCY HOTLINES</string>
    <string name="text_inside_offline_button_fire">533-2225\n588-2222</string>
    <string name="text_inside_offline_button_police">02-532-5001</string>
    <string name="text_inside_offline_button_ambulance">8534-0163\n8532-5001</string>
    <string name="ambulance_department_offline">AMBULANCE\nDEPARTMENT</string>
    <string name="coast_guard_department_offline">COAST GUARD \nDEPARTMENT</string>
    <string name="fire_department_admin">FIRE DEPARTMENT</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="name">NAME:</string>
    <string name="name1">name</string>
    <string name="contact_number">"CONTACT NUMBER: "</string>
    <string name="gps_location">GPS LOCATION:</string>
    <string name="police_department_admin">POLICE DEPARTMENT</string>
    <string name="ambulance_department_admin">AMBULANCE DEPARTMENT</string>
    <string name="coast_guard_department_admin">COAST GUARD DEPARTMENT</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember Me?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="what_account">What account are you using?</string>
    <string name="user">USER</string>
    <string name="or">or</string>
    <string name="admin">ADMIN</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_location">Admin Location</string>
    <string name="user_location">User Location</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="national_hotlines">NATIONAL EMERGENCY HOTLINES</string>
    <string name="emergency_department">911</string>
    <string name="prc">143</string>
    <string name="emergency_department_text">EMERGENCY DEPARTMENT</string>
    <string name="philippine_red_cross">PHILIPPINE RED CROSS</string>
    <string name="what_department_are_you">What department are you?</string>
    <string name="ambulance_department1">AMBULANCE</string>
    <string name="police_department1">POLICE</string>
    <string name="coastguard_department1">COAST GUARD</string>
    <string name="fire_department1">FIRE</string>
    <string name="get_admin_location">Get Admin Location</string>
    <string name="go_to_gmaps">GOOGLE MAPS</string>
    <string name="ACCEPT">ACCEPT</string>
    <string name="email">EMAIL:</string>
    <string name="what_account_are_you_using">What account are you using?</string>
    <string name="choose_department">Choose Department</string>
    <string name="first_name">First Name, Middle Name</string>
    <string name="first_name2">first name, middle name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name2">last name</string>
    <string name="upload">UPLOAD</string>
    <string name="capture">CAPTURE</string>
    <string name="submit">SUBMIT</string>
    <string name="email3">Email: </string>
    <string name="department">"Department:"</string>
    <string name="profile">PROFILE</string>
    <string name="contact_dev">Contact Developer for Admin Password</string>
    <string name="CHAT">CHAT</string>
    <string name="get_user_location">Get User Location\n</string>
    <string name="done">DONE</string>
    <string name="user_email">Email:</string>
    <string name="mm_dd_yyyy">yyyy/mm/dd</string>
    <string name="eula">End User License Agreement</string>
    <string name="lorem_ipsum">End User License Agreement (\"EULA\") for ResqApp\nIMPORTANT: PLEASE READ THIS EULA CAREFULLY BEFORE DOWNLOADING OR USING THE RESQAPP APPLICATION (THE \"APPLICATION\"). BY DOWNLOADING OR USING THE APPLICATION, YOU AGREE TO BE BOUND BY THE TERMS AND CONDITIONS OF THIS EULA.\n\n1. Definitions\n\"Application\" means the ResqApp mobile application, including any updates, upgrades, and bug fixes provided by ResqApp.\n\"You\" or \"User\" means the individual or entity downloading or using the Application.\n\n2. License Grant\nResqApp grants you a non-exclusive, non-transferable license to download and use the Application on a single mobile device that you own or control, subject to the terms and conditions of this EULA.\n\n3. Restrictions on Use\nYou may not:\n\nDistribute or make the Application available over a network where it could be used by multiple devices at the same time.\nRent, lease, lend, sell, redistribute, or sublicense the Application.\nModify, decompile, reverse engineer, disassemble, or attempt to derive the source code of the Application.\nUse the Application for any illegal or unauthorized purpose, or in a manner that violates any local, state, national, or international laws or regulations.\nRemove or alter any proprietary notices or labels from the Application.\n\n4. User Content\nYou are solely responsible for any content you submit through the Application (\"User Content\"). You represent and warrant that you have all necessary rights and permissions to submit User Content and that your submission of User Content does not violate any third-party rights.\n\n5. Disclaimer of Warranties\nTHE APPLICATION IS PROVIDED \"AS IS\" AND WITHOUT WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED. RESQAPP DISCLAIMS ALL WARRANTIES, INCLUDING, BUT NOT LIMITED TO, WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT, AND TITLE.\n\nRESQAPP DOES NOT WARRANT THAT THE APPLICATION WILL BE:\nUNINTERRUPTED OR ERROR-FREE\nSECURE, OR FREE FROM VIRUSES OR MALWARE\nCOMPATIBLE WITH ANY PARTICULAR DEVICE OR SOFTWARE\n\n6. Limitation of Liability\nIN NO EVENT SHALL RESQAPP, ITS AFFILIATES, OFFICERS, DIRECTORS, EMPLOYEES, AGENTS, OR LICENSORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, INCLUDING, BUT NOT LIMITED TO, PERSONAL INJURY, PROPERTY DAMAGE, LOSS OF USE, LOSS OF PROFITS, LOSS OF DATA, OR OTHER INTANGIBLE LOSSES, ARISING OUT OF OR RELATED TO YOUR USE OF THE APPLICATION, EVEN IF RESQAPP HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.\n\n7. Term and Termination\nThis EULA will remain in effect until terminated by you or ResqApp. You may terminate this EULA by deleting the Application from your device. ResqApp may terminate this EULA at any time, with or without cause, upon written notice to you.\n\n8. Governing Law\nThis EULA shall be governed by and construed in accordance with the laws of Philippines, without regard to its conflict of laws provisions.\n\n9. Entire Agreement\nThis EULA constitutes the entire agreement between you and ResqApp with respect to your use of the Application and supersedes all prior or contemporaneous communications and proposals, whether oral or written.\n\n10. Severability\nIf any provision of this EULA is held to be invalid or unenforceable, such provision shall be struck and the remaining provisions shall remain in full force and effect.\n\n11. Amendments\nResqApp reserves the right to amend this EULA at any time by posting the revised terms on the ResqApp website or within the Application. You are responsible for checking the EULA periodically for updates. Your continued use of the Application following the posting of any revised EULA constitutes your acceptance of the revised terms.\n\n12. Contact Us\nIf you have any questions about this EULA, please contact us at emergencyresponsesystem116@gmail.com.\n\nBy downloading or using the Application, you acknowledge that you have read and understood this EULA and agree to be bound by its terms and conditions.</string>
    <string name="button">DECLINE</string>
    <string name="get_direction">Get Direction</string>
    <string name="user_to_admin_chat">ADMIN</string>
    <string name="call">CALL</string>
    <string name="get_location">Get Location</string>
    <string name="google_maps_key">AIzaSyC7m6Ggei6Q9SysKXbmqEHPt-W_nyQ42Vg</string>
    <string name="switch_text">Notification</string>
    <string-array name="department1">
        <item>Fire</item>
        <item>Police</item>
        <item>Ambulance</item>
        <item>Coast Guard</item>
    </string-array>

    <string-array name="dropdown_menu1">
        <item>Drivers License</item>

    </string-array>
</resources>
