<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbg"
    android:visibility="visible"
    tools:context=".SplashActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/login_radius"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="410dp"
            android:layout_height="250dp"
            android:layout_marginTop="-60dp"
            android:padding="55dp"
            app:srcCompat="@drawable/img3"
            tools:ignore="ContentDescription,VisualLintBounds" />

        <TextView
            android:id="@+id/offline_mode"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="-252dp"
            android:layout_marginTop="125dp"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/offline_mode"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emergency_hotline"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_marginStart="120dp"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/national_hotlines"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="170dp"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="411dp"
            android:layout_height="170dp"
            android:backgroundTint="@android:color/transparent"
            tools:ignore="VisualLintBounds,TextSizeCheck">

            <ImageButton
                android:id="@+id/fire_button"
                android:layout_width="160dp"
                android:layout_height="147dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/offline_button"
                android:padding="15dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/fire_button_offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="83dp"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/oswald_bold"
                android:text="@string/emergency_department"
                android:textColor="@color/black"
                android:textSize="55sp" />

            <ImageButton
                android:id="@+id/police_button"
                android:layout_width="160dp"
                android:layout_height="147dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/offline_button"
                android:padding="15dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/police_button_offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="252dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/oswald_bold"
                android:text="@string/prc"
                android:textColor="@color/black"
                android:textSize="55sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="190"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="411dp"
            android:layout_height="190dp"
            android:backgroundTint="@android:color/transparent"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/fire_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:fontFamily="@font/oswald"
                android:letterSpacing="0.05"
                android:text="@string/emergency_department_text"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/police_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="223dp"
                android:fontFamily="@font/oswald"
                android:letterSpacing="0.05"
                android:text="@string/philippine_red_cross"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next_page"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_radius"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/previous"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>