<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="41dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            app:srcCompat="@drawable/img3"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:text="@string/id1"
            android:textSize="15sp"
            android:fontFamily="@font/oswald"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/id1"
            android:layout_width="212dp"
            android:layout_height="38dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/border"
            android:hint="@string/id"
            android:inputType="text"
            android:letterSpacing="0.09"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:fontFamily="@font/oswald_light"
            android:textAlignment="textStart"
            android:textSize="12sp"
            tools:ignore="Autofill,MissingConstraints,SmallSp,TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            />
        
        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="-28dp"
            android:src="@drawable/baseline_folder_24"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:text="@string/first_name1"
            android:fontFamily="@font/oswald"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/fname1"
            android:layout_width="212dp"
            android:layout_height="38dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:autofillHints="name"
            android:background="@drawable/border"
            android:ems="10"
            android:fontFamily="@font/oswald_light"
            android:hint="@string/firstname"
            android:inputType="text"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textAlignment="textStart"
            android:textSize="12sp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:text="@string/last_name1"
            android:fontFamily="@font/oswald"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/lname1"
            android:layout_width="212dp"
            android:layout_height="38dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:autofillHints="name"
            android:background="@drawable/border"
            android:fontFamily="@font/oswald_light"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="text"
            android:letterSpacing="0.09"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textAlignment="textStart"
            android:textSize="12sp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:fontFamily="@font/oswald"
            android:textSize="15sp"
            android:text="@string/email_or_phone_number1"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/email1"
            android:layout_width="212dp"
            android:layout_height="38dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/emailorphonenumber"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/oswald_light"
            android:letterSpacing="0.09"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textAlignment="textStart"
            android:textSize="12sp"
            tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,TextContrastCheck,TouchTargetSizeCheck"
            tools:layout_editor_absoluteY="572dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:text="@string/password1"
            android:fontFamily="@font/oswald"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/pass1"
            android:layout_width="212dp"
            android:layout_height="38dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:letterSpacing="0.09"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textAlignment="textStart"
            android:fontFamily="@font/oswald_light"
            android:textSize="12sp"
            tools:ignore="Autofill,MissingConstraints,TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteY="449dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/conpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:text="@string/confirm_password1"
            android:fontFamily="@font/oswald"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/conpass1"
            android:layout_width="212dp"
            android:layout_height="38dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="101dp"
            android:background="@drawable/border"
            android:ems="10"
            android:fontFamily="@font/oswald_light"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:letterSpacing="0.09"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textAlignment="textStart"
            android:textSize="12sp"
            tools:ignore="Autofill,MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck"
            />
    </LinearLayout>


    _____________________________
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/register"
            android:layout_width="212dp"
            android:layout_height="38dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="172dp"
            android:background="@drawable/red_border"
            android:hint="@string/register"
            android:letterSpacing="0.4"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>