<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9BBEE6"
    tools:context=".DashboardUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"

        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:padding="40dp"
            app:srcCompat="@drawable/resqapplogo"
            tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_department_are_you"
            android:fontFamily="@font/oswald_light"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/fire_button_admin"
            android:layout_width="204dp"
            android:layout_height="41dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/red_border"
            android:fontFamily="@font/oswald_bold"
            android:hint="@string/fire_department1"
            android:letterSpacing="0.1"
            android:textColorHint="@color/white"
            tools:ignore="HardcodedText,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/police_button_admin"
            android:layout_width="204dp"
            android:layout_height="41dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/red_border"
            android:fontFamily="@font/oswald_bold"
            android:hint="@string/police_department1"
            android:letterSpacing="0.1"
            android:textColorHint="@color/white"
            tools:ignore="HardcodedText,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/ambulance_button_admin"
            android:layout_width="204dp"
            android:layout_height="41dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/red_border"
            android:fontFamily="@font/oswald_bold"
            android:hint="@string/ambulance_department1"
            android:letterSpacing="0.1"
            android:textSize="15sp"
            android:textColorHint="@color/white"
            tools:ignore="HardcodedText,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/coast_guard_button_admin"
            android:layout_width="204dp"
            android:layout_height="41dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/red_border"
            android:fontFamily="@font/oswald_bold"
            android:hint="@string/coastguard_department1"
            android:letterSpacing="0.1"
            android:textColorHint="@color/white"
            tools:ignore="HardcodedText,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>


</LinearLayout>