<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="25dp"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription,ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >


        <Button
            android:id="@+id/upload"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/sign_out"
            android:textSize="18sp"
            android:text="@string/upload"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/capture"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/sign_out"
            android:fontFamily="@font/oswald_bold"
            android:textSize="18sp"
            android:text="@string/capture"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >


        <Button
            android:id="@+id/submit"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/oswald_bold"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/sign_out"
            android:textSize="18sp"
            android:text="@string/submit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:text="" />
    </LinearLayout>
</LinearLayout>